Default scrollbar size to avoid reescaling when moving to dark mode.

--- a/style/_chat.scss
+++ b/style/_chat.scss
@@ -35,6 +35,19 @@
         overflow-y: scroll;
         width: 100%;
 
+        &::-webkit-scrollbar {
+            width: 1em;
+        }
+
+        &::-webkit-scrollbar-track {
+            -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: darkgrey;
+            outline: 1px solid slategrey;
+        }
+
         @media (max-width: 425px) {
             position: relative;
             height: auto;
